--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@reduxjs/toolkit": "^1.6.1",
     "if-env": "^1.0.4",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
